try catch added for navigate different pages

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">458,816</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">280,052</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testl.inkedIn.ExtractInformation</td><td><a href="#m0">ExtractList</a></td><td rowspan="1">1722678093694</td><td rowspan="1">362544</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1722678006832</td><td rowspan="1">3028</td></tr><tr class="passedeven"><td><a href="#m2">selectFilter</a></td><td rowspan="1">1722678009867</td><td rowspan="1">83823</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testl.inkedIn.ExtractInformation</td><td><a href="#m0">extractList</a></td><td rowspan="1">1722871389700</td><td rowspan="1">178379</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1722871313244</td><td rowspan="1">38</td></tr><tr class="passedeven"><td><a href="#m2">selectFilter</a></td><td rowspan="1">1722871313299</td><td rowspan="1">76385</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testl.inkedIn.ExtractInformation#ExtractList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testl.inkedIn.ExtractInformation#extractList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">testl.inkedIn.ExtractInformation#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">testl.inkedIn.ExtractInformation#selectFilter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
