--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\deept\AppData\Local\Temp\testng-eclipse--701503120\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1177970544\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testl.inkedIn.ExtractInformation" class="method navigator-link" hash-for-method="ExtractList">ExtractList</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testl.inkedIn.ExtractInformation" class="method navigator-link" hash-for-method="extractList">extractList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -136,9 +136,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ExtractList">
-                  </a> <!-- ExtractList -->
-                  <span class="method-name">ExtractList</span>
+                  <a name="extractList">
+                  </a> <!-- extractList -->
+                  <span class="method-name">extractList</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -160,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\deept\AppData\Local\Temp\testng-eclipse--701503120\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1177970544\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -211,22 +211,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ExtractList')
+data.setCell(0, 1, 'extractList')
 data.setCell(0, 2, 'testl.inkedIn.ExtractInformation')
-data.setCell(0, 3, 362544);
+data.setCell(0, 3, 178379);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'selectFilter')
 data.setCell(1, 2, 'testl.inkedIn.ExtractInformation')
-data.setCell(1, 3, 83823);
+data.setCell(1, 3, 76385);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'testl.inkedIn.ExtractInformation')
-data.setCell(2, 3, 3028);
+data.setCell(2, 3, 38);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 minutes</span>
+              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,19 +259,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">9047 ms</span>
+                <span class="method-start">24858 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">selectFilter</span>
-                <span class="method-start">12082 ms</span>
+                <span class="method-start">24913 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ExtractList</span>
-                <span class="method-start">95909 ms</span>
+                <span class="method-name">extractList</span>
+                <span class="method-start">101314 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">458455 ms</span>
+                <span class="method-start">279699 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
