--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">166,164</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">282,638</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testl.inkedIn.Instahyre</td><td><a href="#m0">login</a></td><td rowspan="1">1723311652138</td><td rowspan="1">6586</td></tr><tr class="passedeven"><td><a href="#m1">processOpportunities</a></td><td rowspan="1">1723311658741</td><td rowspan="1">155464</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.sourcing.Instahyre</td><td><a href="#m0">login</a></td><td rowspan="1">1723369187429</td><td rowspan="1">14931</td></tr><tr class="passedeven"><td><a href="#m1">processOpportunities</a></td><td rowspan="1">1723369202370</td><td rowspan="1">264997</td></tr><tr class="passedodd"><td rowspan="3">test.sourcing.Linked</td><td><a href="#m2">extractList</a></td><td rowspan="1">1723369302830</td><td rowspan="1">126670</td></tr><tr class="passedodd"><td><a href="#m3">login</a></td><td rowspan="1">1723369187584</td><td rowspan="1">75215</td></tr><tr class="passedodd"><td><a href="#m4">selectFilter</a></td><td rowspan="1">1723369262801</td><td rowspan="1">40029</td></tr><tr class="passedeven"><td rowspan="1">test.sourcing.Naukri</td><td><a href="#m5">naukriLoginAndUpdateResumeHeadline</a></td><td rowspan="1">1723369186699</td><td rowspan="1">70540</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testl.inkedIn.Instahyre#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testl.inkedIn.Instahyre#processOpportunities</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">test.sourcing.Instahyre#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.sourcing.Instahyre#processOpportunities</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.sourcing.Linked#extractList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.sourcing.Linked#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>vigneshvasugv01@gmail.com</td><td>Linkedin@user@10</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.sourcing.Linked#selectFilter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.sourcing.Naukri#naukriLoginAndUpdateResumeHeadline</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
